--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 /* الهيدر */
 .hero {
   height: 90vh;
-  background: url(imag/ns.jpeg)
+  background: url(ns.jpeg)
     center/cover no-repeat;
   position: relative;
 }
